--- a/css/estilos.css
+++ b/css/estilos.css
@@ -617,6 +617,7 @@ box-shadow: 5px 5px 10px rgba(0, 0, 0, .3);
 
 #chart-demo {
     height: 460px;
+	background: rgb(0, 0, 0);
   }
   
   .charts {
