--- a/css/estilos.css
+++ b/css/estilos.css
@@ -665,7 +665,7 @@ height: 370px;
 margin-top: auto;
 margin-bottom: auto;
 width: 400px;
-background-color: rgba(162, 162, 162, 0.5) !important;
+background-color: rgba(162, 162, 162, 0.5) ;
 }
 
 .social_icon span{
